--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,40 @@
 node_modules
 .idea
+
+# Xcode
+.DS_Store
+*/build/*
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+*.hmap
+*.xccheckout
+*.xcworkspace
+!default.xcworkspace
+
+# GitHub OAuth credentials are now stored in UserDefaults
+# No need to ignore GitHubOAuthConfig.swift anymore
+
+# CocoaPods
+Pods/
+
+# Carthage
+Carthage/Build
+
+# Swift Package Manager
+.build/
+
+# fastlane
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
